--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5"
   },
+  "scripts": {
+    "start": "nodemon app.js",
+    "prettier": "pretty-quick --staged",
+    "lint": "lint-staged"
+  },
+  "license": "ISC",
   "devDependencies": {
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -10,6 +17,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.5",
     "husky": "^6.0.0",
-    "nodemon": "^2.0.7"
+    "lint-staged": "^11.0.0",
+    "nodemon": "^2.0.12"
   }
 }
